Added new div id tea container to the index.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		/*
+		 * Loading javascript and jquery libary scripts.
+		 */
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
 		<script src="scripts.js" type="text/javascript"></script>
 		<title>Data Viz Project IV</title>
 	</head>
 	<body>
 		<h1>Data Viz Project IV</h1>
-		<div> Data Viz Project Coming Soon.........</div>
+		<div id = "teaContainer"></div>
 	</body>
 </html>
 
